# Paycheck

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  VERSIONING.md  market_potential.md
bruno/: README.md  bruno.json  collection.bru
bruno/Dev/: Create License.bru
bruno/Operator API/: Create Operator API Key.bru  Create Operator.bru  Create Organization.bru  Create User API Key.bru  Create User.bru  Delete Operator.bru  Delete Organization.bru  Delete User.bru  Get Operator.bru  Get Org Payment Config.bru  Get Org Payment Provider Config.bru  Get Organization.bru  Get User.bru  Hard Delete Organization.bru  Hard Delete User.bru  List Operator API Keys.bru  List Operators.bru  List Organizations.bru  List User API Keys.bru  List Users.bru  Lookup Licenses by Email.bru  Query Audit Logs Text.bru  Query Audit Logs.bru  Restore Organization.bru  Restore User.bru  Revoke Operator API Key.bru  Revoke User API Key.bru  Update Operator.bru  Update Organization Tags.bru  Update Organization.bru  Update User Tags.bru  Update User.bru  folder.bru
bruno/Organization API/: Get Payment Config.bru  Get Payment Provider Config.bru  folder.bru
bruno/Organization API/Audit Logs/: Query Audit Logs.bru  folder.bru
bruno/Organization API/Impersonation/: Create License (Impersonated).bru  Create Member API Key (Impersonated).bru  Create Product (Impersonated).bru  Create Project (Impersonated).bru  Create Provider Link (Impersonated).bru  Create Service Config (Impersonated).bru  Delete Service Config (Impersonated).bru  Get License (Impersonated).bru  Get Service Config (Impersonated).bru  List Licenses (Impersonated).bru  List Member API Keys (Impersonated).bru  List Products (Impersonated).bru  List Provider Links (Impersonated).bru  List Service Configs (Impersonated).bru  Revoke License (Impersonated).bru  Update License (Impersonated).bru  Update Product (Impersonated).bru  Update Project (Impersonated).bru  Update Provider Link (Impersonated).bru  Update Service Config (Impersonated).bru  folder.bru
bruno/Organization API/Licenses/: Create License.bru  Deactivate Device.bru  Get License.bru  List Licenses.bru  Replace License.bru  Restore License.bru  Revoke License.bru  Send Activation Code.bru  Update License.bru  folder.bru
bruno/Organization API/Members/: Create Member API Key.bru  Create Member.bru  Delete Member.bru  Get Member.bru  List Member API Keys.bru  List Members.bru  Restore Member.bru  Revoke Member API Key.bru  Update Member.bru  folder.bru
bruno/Organization API/Products/: Create Product.bru  Delete Product.bru  Get Product.bru  List Products.bru  Restore Product.bru  Update Product.bru
bruno/Public/: Buy.bru  Callback.bru  Deactivate Device.bru  Generate Redemption Code.bru  License Info.bru  Redeem with Code.bru  Redeem with Key.bru  Refresh Token.bru  Request Activation Code.bru  Validate.bru
bruno/Webhooks/: LemonSqueezy Webhook.bru  Stripe Webhook.bru  folder.bru
bruno/environments/: Local.bru
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: DEPLOYMENT.md  docusaurus.config.ts  package-lock.json
docs/docs/: api.md  concepts.md  intro.md  quickstart.md  sdk.md
scripts/: bootstrap-paycheck.sh  rotate-master-key.sh
sdk/: CORE.md
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: blocking.rs  device.rs  jwt.rs  lib.rs  paycheck.rs  storage.rs  types.rs
sdk/typescript/: README.md
src/: config.rs  crypto.rs  email.rs  error.rs  extractors.rs  feedback.rs  id.rs  lib.rs  main.rs  metering.rs  pagination.rs  rate_limit.rs  util.rs
src/db/: from_row.rs  migrations.rs  mod.rs  queries.rs  schema.rs
src/handlers/: mod.rs
src/jwt/: claims.rs  first_party.rs  jwks.rs  mod.rs  signing.rs
src/middleware/: mod.rs  operator_auth.rs  org_auth.rs
src/models/: api_key.rs  audit_log.rs  device.rs  license.rs  mod.rs  operator.rs  org_member.rs  org_service_config.rs  organization.rs  payment_session.rs  product.rs  product_provider_link.rs  project.rs  project_member.rs  service_config.rs  transaction.rs  user.rs
src/payments/: lemonsqueezy.rs  mod.rs  stripe.rs
tests/: auth.rs  db.rs  db_crud.rs  db_device.rs  db_license.rs  dev_endpoints.rs  error_responses.rs  handlers.rs  jwt.rs  key_rotation.rs  operator_handlers.rs  org_handlers.rs  performance.rs  public.rs  public_buy.rs  public_callback.rs  public_devices.rs  public_license.rs  public_redeem.rs  public_validate.rs  refresh.rs  security.rs  soft_delete.rs  webhooks.rs
tests/auth/: audit_isolation.rs  cross_project.rs  device_permissions.rs  helpers.rs  impersonation.rs  license_permissions.rs  operators.rs  org_members.rs  project_members.rs  project_permissions.rs
tests/common/: mod.rs
tests/crypto/: encryption.rs  jwt.rs  key_rotation.rs
tests/db/: api_key_atomicity.rs  bulk_license_atomicity.rs  crud.rs  device.rs  from_row_panic.rs  license.rs  payment_session.rs  service_config_inheritance.rs  soft_delete.rs  tags.rs
tests/handlers/: operators.rs  org_api_coverage.rs  orgs.rs  service_configs.rs  webhooks.rs
tests/public/: activation.rs  buy.rs  callback.rs  devices.rs  feedback_metering.rs  license.rs  org_tag_enforcement.rs  redeem.rs  refresh.rs  validate.rs
tests/security/: api_key_scope_validation.rs  api_keys.rs  audit_logging.rs  body_size_limit.rs  cascade_delete.rs  cors_validation.rs  cross_org_isolation.rs  csrf_protection.rs  email_hash_rainbow_table.rs  email_recovery.rs  email_validation.rs  error_leakage.rs  error_logging_audit.rs  input_validation.rs  jwks_rsa_parsing.rs  jwt_claims.rs  license_expiration_validation.rs  rate_limiting.rs  service_config_permissions.rs  ssrf_prevention.rs  webhook_error_handling.rs
(+66 files in other folders)
