[package]
name = "paycheck"
version = "0.6.2"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = { version = "0.8", features = ["axum"] }
governor = "0.10"  # Must match tower_governor 0.8's version

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT and crypto
jwt-simple = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# HTTP client (for payment providers)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Envelope encryption
aes-gcm = "0.10"
hkdf = "0.12"

# Constant-time comparison (for webhook signature verification)
subtle = "2"

# Utilities
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
urlencoding = "2"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"
