[package]
name = "paycheck-sdk"
version = "0.5.0"
edition = "2024"
description = "Paycheck licensing SDK for Rust applications"
license = "MIT"
repository = "https://github.com/CallMeGwei/Paycheck"
keywords = ["paycheck", "licensing", "license", "jwt", "ed25519"]
categories = ["authentication", "api-bindings"]

[features]
default = ["native-storage", "native-tls"]
native-storage = ["dep:directories"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
urlencoding = "2"

# Optional: file-based storage
directories = { version = "5", optional = true }

# Async runtime
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux uses /etc/machine-id (no extra deps needed)

[target.'cfg(target_os = "macos")'.dependencies]
# macOS uses IOKit (system framework, no extra deps)

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
