[package]
name = "paycheck-sdk"
version = "0.8.0"
edition = "2024"
description = "Paycheck licensing SDK for Rust applications"
license = "Elastic-2.0"
repository = "https://github.com/SmartAppsCo/Paycheck"
keywords = ["paycheck", "licensing", "license", "jwt", "ed25519"]
categories = ["authentication", "api-bindings"]

[features]
default = ["rustls-tls"]
native-tls = ["ureq/native-tls"]
rustls-tls = ["ureq/rustls"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
urlencoding = "2"
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
